# substrate-mfm-engine

./: .gitignore  BYTECODE.md  CODE_OF_CONDUCT.md  Cargo.toml  LAYOUT.md  MANUAL.md  README.md
examples/: empty.s  fork.s  jro.s  nop.s  res.s  self.s  superfork.s
examples/imops/: edge_detect.s  invert_walk.s  random_walk.s  yellow_walk.s
src/: .substrate.lalrpop.old  arith.rs  ast.rs  base.rs  bin.rs  code.rs  lib.rs  main.rs  mfm.rs  model.rs  stack.rs  substrate.lalrpop  token.rs  tokenizer.rs
src/base/: arith.rs  color.rs  mod.rs  op.rs
src/lib/: stack.rs
src/runtime/: mfm.rs  mod.rs
tests/testdata/: bad_command.s  dreg.s  fact.s  min_call.s  nop.s  pop.s  self.s  setfield_type.s
