[package]
name = "substrate-engine"
version = "0.1.0"
authors = ["ajzaff <ajzaff@gmail.com>"]
edition = "2018"

build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
rand = "0.8.3"
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
lalrpop-util = "0.19.4"
regex = "1"