[package]
name = "substrate-engine"
version = "0.1.0"
authors = ["ajzaff <ajzaff@gmail.com>"]
edition = "2018"

build = "build.rs" # LALRPOP preprocessing

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
failure = "0.1"
atty = "0.2"
structopt = "0.2"
quicli = "0.4"
enquote = "1.0"
bitflags = "1.0"
rand = "0.8.3"
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
lalrpop-util = "0.19"
regex = "1"

[[bin]]
name = "ewac"
path = "src/bin.rs"