[package]
name = "substrate-engine"
version = "0.1.0"
authors = ["ajzaff <ajzaff@gmail.com>"]
edition = "2018"

build = "build.rs" # LALRPOP preprocessing

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
stderrlog = "0.5"
log = "0.4"
colored = "2.0"
thiserror = "1.0"
clap = "2.33"
lazy_static = "1.4"
byteorder = "1.4"
atty = "0.2"
structopt = "0.3"
enquote = "1.0"
bitflags = "1.0"
rand = "0.8"
lalrpop-util = "0.19"

[[bin]]
name = "ewac"
path = "src/main.rs"